Added central dispatcher and auth-store and moved tags to separate stores and made them registter with dispatcher.

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "jquery": "~1.11.1",
-    "zepto": "~1.1.6"
+    "zepto": "~1.1.6",
+    "css-element-queries": "~0.2.1"
   }
 }
